--- a/SadAgregator/View/cells/VendorCell/TableViewCells/RatingCell/RatingTableViewCell.xib
+++ b/SadAgregator/View/cells/VendorCell/TableViewCells/RatingCell/RatingTableViewCell.xib
@@ -42,6 +42,9 @@
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
+            <connections>
+                <outlet property="ratingView" destination="Geb-sz-1Ol" id="sGv-c1-dyy"/>
+            </connections>
             <point key="canvasLocation" x="75.362318840579718" y="107.47767857142857"/>
         </tableViewCell>
     </objects>
