--- a/SadAgregator/View/cells/VendorCell/VendTableViewCell.xib
+++ b/SadAgregator/View/cells/VendorCell/VendTableViewCell.xib
@@ -36,22 +36,45 @@
                             </label>
                         </subviews>
                     </stackView>
-                    <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="FYz-bo-vYd">
-                        <rect key="frame" x="246.5" y="35.5" width="65.5" height="18"/>
+                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="p37-af-azI">
+                        <rect key="frame" x="246.5" y="35.5" width="65.5" height="44"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="person.fill.checkmark" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="bMI-Fk-sDZ">
-                                <rect key="frame" x="0.0" y="1.5" width="22" height="15"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="22" id="IhO-Wl-dBa"/>
-                                    <constraint firstAttribute="height" constant="18" id="ZI3-dL-f11"/>
-                                </constraints>
-                            </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="11" translatesAutoresizingMaskIntoConstraints="NO" id="qHg-Z9-Jgr">
-                                <rect key="frame" x="30" y="0.0" width="35.5" height="18"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="FYz-bo-vYd">
+                                <rect key="frame" x="0.0" y="0.0" width="65.5" height="18"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="person.fill.checkmark" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="bMI-Fk-sDZ">
+                                        <rect key="frame" x="0.0" y="1.5" width="22" height="15"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="22" id="IhO-Wl-dBa"/>
+                                            <constraint firstAttribute="height" constant="18" id="ZI3-dL-f11"/>
+                                        </constraints>
+                                    </imageView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="11" translatesAutoresizingMaskIntoConstraints="NO" id="qHg-Z9-Jgr">
+                                        <rect key="frame" x="30" y="0.0" width="35.5" height="18"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </stackView>
+                            <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="y9s-12-Lrj">
+                                <rect key="frame" x="0.0" y="26" width="65.5" height="18"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="star.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="XWy-of-AXd">
+                                        <rect key="frame" x="0.0" y="-0.5" width="18" height="18"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="18" id="A5J-MR-CjM"/>
+                                            <constraint firstAttribute="height" constant="18" id="VGH-0p-WaL"/>
+                                        </constraints>
+                                    </imageView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="11" translatesAutoresizingMaskIntoConstraints="NO" id="wi1-av-ON1">
+                                        <rect key="frame" x="26" y="0.0" width="39.5" height="18"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </stackView>
                         </subviews>
                     </stackView>
                     <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="7tu-uR-bDH">
@@ -61,15 +84,15 @@
                 </subviews>
                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 <constraints>
-                    <constraint firstItem="FYz-bo-vYd" firstAttribute="leading" secondItem="7tu-uR-bDH" secondAttribute="trailing" constant="8" id="8db-rs-phv"/>
+                    <constraint firstItem="p37-af-azI" firstAttribute="top" secondItem="qjw-mj-pfX" secondAttribute="bottom" constant="8" id="1aq-PF-6xU"/>
                     <constraint firstItem="qjw-mj-pfX" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="NsD-bb-m8k"/>
                     <constraint firstItem="7tu-uR-bDH" firstAttribute="top" secondItem="qjw-mj-pfX" secondAttribute="bottom" constant="8" id="PyR-hc-dRV"/>
                     <constraint firstAttribute="trailing" secondItem="qjw-mj-pfX" secondAttribute="trailing" constant="8" id="RFi-tW-Ruu"/>
                     <constraint firstItem="7tu-uR-bDH" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="RQd-Hx-GbI"/>
-                    <constraint firstItem="FYz-bo-vYd" firstAttribute="top" secondItem="qjw-mj-pfX" secondAttribute="bottom" constant="8" id="hOf-m8-TZj"/>
+                    <constraint firstItem="p37-af-azI" firstAttribute="leading" secondItem="7tu-uR-bDH" secondAttribute="trailing" constant="8" id="VKM-FN-xpH"/>
+                    <constraint firstAttribute="trailing" secondItem="p37-af-azI" secondAttribute="trailing" constant="8" id="oPx-XZ-Gc8"/>
                     <constraint firstItem="qjw-mj-pfX" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="qlz-EA-4xc"/>
                     <constraint firstAttribute="bottom" secondItem="7tu-uR-bDH" secondAttribute="bottom" constant="8" id="wT1-8Y-UAv"/>
-                    <constraint firstAttribute="trailing" secondItem="FYz-bo-vYd" secondAttribute="trailing" constant="8" id="zLX-HZ-HEn"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
@@ -78,6 +101,8 @@
                 <outlet property="nameLabel" destination="6rK-DH-s1f" id="JYU-Je-7s7"/>
                 <outlet property="peoplesImageView" destination="bMI-Fk-sDZ" id="qga-Wf-4qd"/>
                 <outlet property="peoplesLabel" destination="qHg-Z9-Jgr" id="5wr-r7-dHb"/>
+                <outlet property="revImageView" destination="XWy-of-AXd" id="bca-Gd-C9s"/>
+                <outlet property="revLabel" destination="wi1-av-ON1" id="vxt-BL-tFs"/>
                 <outlet property="tableView" destination="7tu-uR-bDH" id="d1F-Ah-3eA"/>
             </connections>
             <point key="canvasLocation" x="73.913043478260875" y="133.92857142857142"/>
@@ -85,5 +110,6 @@
     </objects>
     <resources>
         <image name="person.fill.checkmark" catalog="system" width="128" height="88"/>
+        <image name="star.fill" catalog="system" width="128" height="116"/>
     </resources>
 </document>
