--- a/SadAgregator/View/cells/VendorCell/TableViewCells/PhoneCell/PhoneTableViewCell.xib
+++ b/SadAgregator/View/cells/VendorCell/TableViewCells/PhoneCell/PhoneTableViewCell.xib
@@ -9,22 +9,22 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="PhoneTableViewCell" customModule="SadAgregator" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="26" id="KGk-i7-Jjw" customClass="PhoneTableViewCell" customModule="SadAgregator" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="26"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="26"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="phone.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="5eA-VT-ZAd">
-                        <rect key="frame" x="0.0" y="10" width="27" height="24.5"/>
+                        <rect key="frame" x="0.0" y="1.5" width="22" height="22.5"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="27" id="dmV-wU-CKg"/>
-                            <constraint firstAttribute="width" constant="27" id="iDC-S4-QOh"/>
+                            <constraint firstAttribute="height" constant="25" id="dmV-wU-CKg"/>
+                            <constraint firstAttribute="width" constant="22" id="iDC-S4-QOh"/>
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sxn-0v-Kyf">
-                        <rect key="frame" x="35" y="13" width="277" height="18"/>
+                        <rect key="frame" x="30" y="3.5" width="282" height="18"/>
                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
@@ -34,6 +34,8 @@
                 <constraints>
                     <constraint firstAttribute="trailing" secondItem="sxn-0v-Kyf" secondAttribute="trailing" constant="8" id="5O5-Bt-jfm"/>
                     <constraint firstItem="5eA-VT-ZAd" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="QRU-8t-Tid"/>
+                    <constraint firstAttribute="bottom" secondItem="5eA-VT-ZAd" secondAttribute="bottom" id="Uog-na-LRk"/>
+                    <constraint firstItem="5eA-VT-ZAd" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="eJV-wT-Fo9"/>
                     <constraint firstItem="sxn-0v-Kyf" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="eyL-Za-Pdi"/>
                     <constraint firstItem="sxn-0v-Kyf" firstAttribute="leading" secondItem="5eA-VT-ZAd" secondAttribute="trailing" constant="8" id="oeR-Va-IeB"/>
                     <constraint firstItem="5eA-VT-ZAd" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="t2O-8d-rNa"/>
@@ -44,7 +46,7 @@
                 <outlet property="label" destination="sxn-0v-Kyf" id="Vn7-vy-vow"/>
                 <outlet property="phoneImageView" destination="5eA-VT-ZAd" id="aqH-ag-cmK"/>
             </connections>
-            <point key="canvasLocation" x="75" y="109"/>
+            <point key="canvasLocation" x="73.913043478260875" y="102.45535714285714"/>
         </tableViewCell>
     </objects>
     <resources>
