--- a/SadAgregator/View/cells/VendorCell/TableViewCells/PopCell/PopTableViewCell.xib
+++ b/SadAgregator/View/cells/VendorCell/TableViewCells/PopCell/PopTableViewCell.xib
@@ -9,22 +9,22 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="28" id="KGk-i7-Jjw" customClass="PopTableViewCell" customModule="SadAgregator" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="28"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="31" id="KGk-i7-Jjw" customClass="PopTableViewCell" customModule="SadAgregator" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="31"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="28"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="31"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="person.2.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="VIE-yN-fVI">
-                        <rect key="frame" x="0.0" y="1.5" width="27" height="24"/>
+                        <rect key="frame" x="0.0" y="2.5" width="27" height="24"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="27" id="4rk-yd-d2l"/>
                             <constraint firstAttribute="width" constant="27" id="fir-G9-6vl"/>
                         </constraints>
                     </imageView>
                     <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumFontSize="13" translatesAutoresizingMaskIntoConstraints="NO" id="cqv-To-wDf">
-                        <rect key="frame" x="35" y="4.5" width="277" height="18"/>
+                        <rect key="frame" x="35" y="5.5" width="277" height="18"/>
                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
@@ -37,8 +37,8 @@
                     <constraint firstItem="cqv-To-wDf" firstAttribute="leading" secondItem="VIE-yN-fVI" secondAttribute="trailing" constant="8" id="dOF-j2-R3S"/>
                     <constraint firstItem="cqv-To-wDf" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="l5s-RP-W20"/>
                     <constraint firstItem="VIE-yN-fVI" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="xPy-mh-BNF"/>
-                    <constraint firstAttribute="bottom" secondItem="VIE-yN-fVI" secondAttribute="bottom" id="yHt-dt-kfZ"/>
-                    <constraint firstItem="VIE-yN-fVI" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="zFB-jh-Rf6"/>
+                    <constraint firstAttribute="bottom" secondItem="VIE-yN-fVI" secondAttribute="bottom" constant="1" id="yHt-dt-kfZ"/>
+                    <constraint firstItem="VIE-yN-fVI" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="1" id="zFB-jh-Rf6"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
@@ -46,7 +46,7 @@
                 <outlet property="label" destination="cqv-To-wDf" id="9o8-fI-Ke7"/>
                 <outlet property="leadingImageView" destination="VIE-yN-fVI" id="9wr-ss-QdM"/>
             </connections>
-            <point key="canvasLocation" x="86.956521739130437" y="71.651785714285708"/>
+            <point key="canvasLocation" x="86.956521739130437" y="71.986607142857139"/>
         </tableViewCell>
     </objects>
     <resources>
